adding list to page

--- a/page.html
+++ b/page.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Hello there</h1>
-</body>
+    <ul>
+      <li>Wake up</li>
+      <li>Pray</li>
+      <li>Eat</li>
+      <li>Play</li>
+      <li>Sleep</li>
+    </ul>
+  </body>
 </html>
