--- a/page.html
+++ b/page.html
@@ -10,8 +10,8 @@
     <ul>
       <li>Wake up</li>
       <li>Pray</li>
-      <li>Eat</li>
-      <li>Play</li>
+      <li>Study</li>
+      <li>Read</li>
       <li>Sleep</li>
     </ul>
   </body>
